[master branch]
    - Replaced window icon with 48x48 image.
    - [experimental] Added local undo/redo handling for entry editor text fields.
    - Added PDF preview functionality to the preview panel. Configurable via "Entry preview" settings.
    - Group edit dialog now closes when Escape is pressed.
    - Fixed MS bib import, month was lost on import.
    - Generate key action in entry editor now honors key overwrite settings.
    - Fixed bug when importing XMP data from PDF, file will now be linked from the new entry.
    - Fixed bug in layout processing - quoted formatter argments are now handled correctly.
    - Fixed bug 3545394: null and curly brackets in custom export filter.
    - Added support for pushing citations to TeXstudio (requires TeXstudio >=2.4)
    - Text-based citations can now be imported using FreeCite by Brown University
      (http://freecite.library.brown.edu). By Kai Mindermann and Daniel Maurer.
    - JabRef supports synchronization of unlinked PDFs. Feature request "[2163626] Scan database - find unlinked files".
      Based on patch 3122104. 
    - Added command line argument -d/-prdef for resetting preferences to default values. Can
      reset a comma-separated list of preference values, or all values.
    - Added small right-click popup menu at each tab
    - A PDF can also be dropped to the preview panel to trigger linking it
    - Drag'n'drop of text from the preview panel to other applications is now working
    - Braces around author names are now dropped internally. They remain in the .bib though
      Effects (incomplete list): Authors in the main window are shown without braces,
      autocompletion does not show these braces
    - Autocompletion: ";" is now also a delimiter allowing "keyword1; keyword2" in the keyword fields
    - Autocompletion: the amount of characters to trigger autocompletion may now be configured
      (default is 2)